[gd_scene load_steps=20 format=2]

[ext_resource path="res://Font/Thempo New St.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Art/UI/menuBackground.png" type="Texture" id=2]
[ext_resource path="res://Art/UI/menuButtonHovered.png" type="Texture" id=3]
[ext_resource path="res://Art/UI/musicToggle.png" type="Texture" id=4]
[ext_resource path="res://Art/UI/musicToggleHovered.png" type="Texture" id=5]
[ext_resource path="res://Art/UI/menuButton.png" type="Texture" id=6]
[ext_resource path="res://Art/UI/musicToggleOff.png" type="Texture" id=7]
[ext_resource path="res://Art/UI/sfxToggle.png" type="Texture" id=8]
[ext_resource path="res://Art/UI/sfxToggleHovered.png" type="Texture" id=9]
[ext_resource path="res://Art/UI/sfxToggleOff.png" type="Texture" id=10]
[ext_resource path="res://Art/UI/instructionsCloseButton.png" type="Texture" id=11]
[ext_resource path="res://Art/UI/instructionsCloseButtonHovered.png" type="Texture" id=12]
[ext_resource path="res://Art/UI/instructionsBackground.png" type="Texture" id=13]
[ext_resource path="res://Scenes/Main/Menu.gd" type="Script" id=14]
[ext_resource path="res://Sounds/Music/funkydungeon.ogg" type="AudioStream" id=15]

[sub_resource type="DynamicFont" id=1]
size = 100
outline_size = 6
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 45
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 30
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
size = 20
font_data = ExtResource( 1 )

[node name="Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 14 )

[node name="Background" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 2 )

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
margin_left = 267.0
margin_right = 1012.0
margin_bottom = 720.0

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer/VBoxContainer"]
margin_right = 745.0
margin_bottom = 100.0
rect_min_size = Vector2( 0, 100 )

[node name="Title" type="Label" parent="HBoxContainer/VBoxContainer"]
margin_top = 104.0
margin_right = 745.0
margin_bottom = 252.0
custom_colors/font_color = Color( 1, 0.835294, 0.254902, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "FATED FANTASY"

[node name="MarginContainer2" type="MarginContainer" parent="HBoxContainer/VBoxContainer"]
margin_top = 256.0
margin_right = 745.0
margin_bottom = 406.0
rect_min_size = Vector2( 0, 150 )

[node name="CenterContainer" type="CenterContainer" parent="HBoxContainer/VBoxContainer"]
margin_top = 410.0
margin_right = 745.0
margin_bottom = 470.0

[node name="playButton" type="TextureButton" parent="HBoxContainer/VBoxContainer/CenterContainer"]
margin_left = 272.0
margin_right = 472.0
margin_bottom = 60.0
texture_normal = ExtResource( 6 )
texture_hover = ExtResource( 3 )

[node name="Label" type="Label" parent="HBoxContainer/VBoxContainer/CenterContainer/playButton"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_colors/font_color = Color( 1, 0.835294, 0.254902, 1 )
custom_fonts/font = SubResource( 2 )
text = "PLAY"
align = 1
valign = 1

[node name="MarginContainer3" type="MarginContainer" parent="HBoxContainer/VBoxContainer"]
margin_top = 474.0
margin_right = 745.0
margin_bottom = 494.0
rect_min_size = Vector2( 0, 20 )

[node name="CenterContainer2" type="CenterContainer" parent="HBoxContainer/VBoxContainer"]
margin_top = 498.0
margin_right = 745.0
margin_bottom = 558.0

[node name="instructionsButton" type="TextureButton" parent="HBoxContainer/VBoxContainer/CenterContainer2"]
margin_left = 272.0
margin_right = 472.0
margin_bottom = 60.0
texture_normal = ExtResource( 6 )
texture_hover = ExtResource( 3 )

[node name="Label" type="Label" parent="HBoxContainer/VBoxContainer/CenterContainer2/instructionsButton"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 5.0
custom_colors/font_color = Color( 1, 0.835294, 0.254902, 1 )
custom_fonts/font = SubResource( 3 )
text = "INSTRUCTIONS"
align = 1
valign = 1

[node name="Toggles2" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 626.0
alignment = 2

[node name="Toggles" type="HBoxContainer" parent="Toggles2"]
margin_top = 35.0
margin_right = 1280.0
margin_bottom = 85.0

[node name="MarginContainer2" type="MarginContainer" parent="Toggles2/Toggles"]
margin_right = 10.0
margin_bottom = 50.0
rect_min_size = Vector2( 10, 0 )

[node name="musicToggle" type="TextureButton" parent="Toggles2/Toggles"]
margin_left = 14.0
margin_right = 64.0
margin_bottom = 50.0
toggle_mode = true
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 7 )
texture_hover = ExtResource( 5 )

[node name="MarginContainer3" type="MarginContainer" parent="Toggles2/Toggles"]
margin_left = 68.0
margin_right = 73.0
margin_bottom = 50.0
rect_min_size = Vector2( 5, 0 )

[node name="sfxToggle" type="TextureButton" parent="Toggles2/Toggles"]
margin_left = 77.0
margin_right = 127.0
margin_bottom = 50.0
toggle_mode = true
texture_normal = ExtResource( 8 )
texture_pressed = ExtResource( 10 )
texture_hover = ExtResource( 9 )

[node name="MarginContainer4" type="MarginContainer" parent="Toggles2"]
margin_top = 89.0
margin_right = 1280.0
margin_bottom = 94.0
rect_min_size = Vector2( 0, 5 )

[node name="instructionsBackground" type="TextureRect" parent="."]
margin_left = 190.0
margin_right = 1090.0
margin_bottom = 720.0
texture = ExtResource( 13 )

[node name="TextureButton2" type="TextureButton" parent="instructionsBackground"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Instructions" type="Label" parent="instructionsBackground"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 25.0
margin_right = -25.0
custom_colors/font_color = Color( 1, 0.835294, 0.254902, 1 )
custom_fonts/font = SubResource( 4 )
text = "Welcome to FATED FANTASY, an action twin-stick game made for Ludum Dare 50. You play as a wizard fighting for his life against waves of enemies using your magic.

As you play, a clock will be ticking down. When it hits zero, you lose the game. The question isn't how far you can get but more how long you can delay the inevitable. Vanquishing your foes will drop time that you can pick up and add on to your timer. The more enemies you vanquish. the more time you can play.

Use W, A, S, D to move your character around and left-click to attack with your basic magic. To help, you can access a shop by pressing Esc at anytime during gameplay. There are passive stats to buy, spending some of your remaining time, as well as abilities that you can only hold one of at a time. Press right-click to use an ability once you have purchased one. They also cost an amount of time to use, so don't go and use them too much or you might end up with not much time left!

We hope you enjoy this game!"
valign = 1
autowrap = true

[node name="close Instructions" type="TextureButton" parent="instructionsBackground"]
margin_left = 830.0
margin_top = 20.0
margin_right = 880.0
margin_bottom = 70.0
texture_normal = ExtResource( 11 )
texture_hover = ExtResource( 12 )

[node name="menuMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 15 )
volume_db = -15.0
autoplay = true
bus = "Music"

[connection signal="pressed" from="HBoxContainer/VBoxContainer/CenterContainer/playButton" to="." method="play"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/CenterContainer2/instructionsButton" to="." method="openInstructions"]
[connection signal="toggled" from="Toggles2/Toggles/musicToggle" to="." method="musicToggled"]
[connection signal="toggled" from="Toggles2/Toggles/sfxToggle" to="." method="sfxToggled"]
[connection signal="pressed" from="instructionsBackground/close Instructions" to="." method="closeInstructions"]
